# LLMBrainAllignment

./: .gitignore  LLMBrainAllignment.md  LOG.md  README.md  TRACKER.md  llm_brain_alignment_novelty_report.md  pyproject.toml  requirements.txt
config/: default.yaml
notebooks/: run_experiments.ipynb
paper/: Makefile  README.md  main.tex  references.bib
scripts/: 01_extract_activations.py  02_compute_surprisal.py  03_fit_encoding.py  04_variance_partitioning.py  05_rsa.py  06_aggregate.py  07_compare.py  08_figures.py  _bootstrap.py  _build_notebook.py
src/llmbrain/: __init__.py  config.py
src/llmbrain/analysis/: __init__.py  matched_subsets.py
src/llmbrain/data/: __init__.py  dataset.py  pereira.py  synthetic.py
src/llmbrain/encoding/: __init__.py  noise.py  ridge.py  rsa.py  stats.py  variance_partitioning.py
src/llmbrain/models/: __init__.py  activations.py  confounds.py  surprisal.py
src/llmbrain/utils/: __init__.py  io.py  pooling.py
tests/: test_pipeline.py
