[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmbrain"
version = "0.1.0"
description = "Disentangling statistical surprisal from hierarchical structure in LLM-brain alignment (Pereira2018)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
models = ["torch>=2.1", "transformers>=4.40", "accelerate>=0.28"]
plot = ["matplotlib>=3.7", "seaborn>=0.12"]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
